--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
   "homepage": "https://github.com/rv-pharos/pharos-api#readme",
   "dependencies": {
     "body-parser": "^1.14.1",
+    "compression": "^1.6.0",
     "express": "^4.13.3",
-    "node-mysql": "^0.4.2"
+    "lodash": "^3.10.1",
+    "node-mysql": "^0.4.2",
+    "response-time": "^2.3.1",
+    "socket.io": "^1.3.7"
   },
   "devDependencies": {
     "mocha": "^2.3.3",
