--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "compression": "^1.6.0",
     "express": "^4.13.3",
     "lodash": "^3.10.1",
+    "mysql": "^2.9.0",
     "node-mysql": "^0.4.2",
     "response-time": "^2.3.1",
     "socket.io": "^1.3.7"
   },
   "devDependencies": {
     "mocha": "^2.3.3",
+    "nodemon": "^1.8.1",
     "should": "^7.1.1"
   }
 }
