--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "compression": "^1.6.0",
     "express": "^4.13.3",
     "lodash": "^3.10.1",
+    "moment": "^2.10.6",
     "mysql": "^2.9.0",
     "node-mysql": "^0.4.2",
     "response-time": "^2.3.1",
